# mdedit

./: .gitignore  README.md  app.py  index.html  main.js  package.json  pyproject.toml  setup.py  style.css
src/mdedit/: __main__.py  app.py  completion.py  main.js  style.css
src/mdedit/frontend/: index.html  main.js  package-lock.json
test/: test_mdfile_ops.py
tmp/: test_open.md  test_save.md
