
[project]
name = "mdedit"
version = "0.1.0"
description = "An editor for markdown files based on EasyMDE and PyWebView."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Camille Vuillaume", email = "camillevuillaume@gmail.com"}
]
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
